# flash-3-way-attention

./: README.md  flash_trittention.py  instructions.txt  pyproject.toml  triton_trittention.py  tritt_bwd_dk_dv.py  trittention.py
b200/: README.md  __init__.py  bench_b200.py  debug_b200.py  flash_trittention_b200.py  fwd_b200.py
dot_product_sum/: benchmark_trittention.py  bwd_dk1_dv1_kernel.py  bwd_dq_kernel.py  bwd_preprocess.py  compare_dk1.py  compare_dq.py  compare_trittention.py  comparison.py  fwd_kernel.py  out_benchmark_1.txt  out_benchmark_3.txt  out_compare_1.txt  pytorch_bwd.py  slow_trittention.py  trittention_pytorch.py  trittention_triton.py
h100/: README.md  __init__.py  bench_h100.py  flash_trittention_h100.py  fwd_h100.py
scripts/: benchmark_dot_product_sum.py  benchmark_seq_len_range.py  benchmark_triple_dot_product.py  compare_dot_product_sum.py  compare_triple_dot_product.py
src/flash_trittention/: __init__.py
src/flash_trittention/common/: __init__.py
src/flash_trittention/dot_product_sum/: __init__.py  trittention_pytorch.py  trittention_triton.py
src/flash_trittention/dot_product_sum/kernels/: __init__.py  bwd_dk1_dv1_kernel.py  bwd_dq_kernel.py  bwd_preprocess.py  fwd_kernel.py
src/flash_trittention/triple_dot_product/: flash_trittention.py  trittention_pytorch.py
src/flash_trittention/triple_dot_product/kernels/: __init__.py  bwd_dk1.py  bwd_dk2.py  bwd_dq.py  bwd_dv1.py  bwd_dv2.py  fwd.py  intervals.py  utils.py
tests/: test_dot_product_sum.py  test_triple_dot_product.py
triple_dot_product/: bwd_preprocess.py  triton_trittention.py  tritt_bwd_dq.py  tritt_fwd.py  trittention.py
