[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flash-trittention"
version = "0.1.0"
description = "Efficient attention mechanisms with multiple implementations"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Gusanidas", email = "alejandrogus792@gmail.com"}
]
dependencies = [
    "torch",
    "triton",
    "numpy",
    "einops"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy"
]

[tool.setuptools]
packages = [
    "flash_trittention",
    "flash_trittention.common",
    "flash_trittention.dot_product_sum",
    "flash_trittention.dot_product_sum.kernels",
    "flash_trittention.triple_dot_product",
    "flash_trittention.triple_dot_product.kernels",
    "b200",
    "h100",
]
package-dir = {"" = "src", "b200" = "b200", "h100" = "h100"}

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
